[2단계 - 블랙잭 베팅] 케로(김지현) 미션 제출합니다. (#588)
* style: rename

* abstract 메서드의 접근 제어자를 변경함

* feat: 카드를 캐싱하도록 함

* feat: 플레이어가 들고있는 카드를 저장하는 클래스 생성-테스트

* feat: 플레이어의 게임 상태를 관리하는 상태 클래스 생성

* feat: player들이 state를 가지도록 변경함

* feat: pr 전 푸시

* refactor: 반환 값을 수정함

* refactor: 메서드명과 내용을 수정함

* feat: 게스트 생성시에 베팅금을 입력받아 저장하도록 함

* feat: 점수 클래스를 만듦

* feat: 플레이어들의 수익을 계산하여 출력해주는 기능 만들음

* debug: 충돌난 것 해결

* refactor: 추상클래스의 구현 메서드는 final 키워드를 붙이고, 추상메서드는 protected로 접근을 제한함

* refactor: Judge 클래스의 메서드를 인스턴스화 없이도 사용할 수 있도록 수정함

* refactor: 클래스명, 메서드명, 메서드 등 수정

* refactor: 바뀐 구조에 맞춰 테스트 코드를 수정함